fixed scrollbar appearing

--- a/GoogleHomepage/extramile-GoogleHomepage.css
+++ b/GoogleHomepage/extramile-GoogleHomepage.css
@@ -86,6 +86,15 @@ body {
     margin-top: auto;
     height: 35px;
     background-color: #f2f2f2;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+.bottomWebsiteContainer {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 .leftBottomNavBar a, .rightBottomNavBar a {
     margin-right: 10px;
